unpackaged/main/default/objects/Attribute_Mapper__c/Attribute_Mapper__c.object-meta.xml
<CustomObject>
    <label>Attribute Mapper</label>
    <nameField>
        <label>Attribute Mapper Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Mappers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>