unpackaged/main/default/objects/Attribute_Mapper__c/fields/Attribute_Definition__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attribute Definition</label>
    <referenceTo>cscfga__Attribute_Definition__c</referenceTo>
    <relationshipLabel>Attribute Mappers</relationshipLabel>
    <relationshipName>Attribute_Mappers</relationshipName>
    <type>Lookup</type>
</CustomField>