unpackaged/main/default/objects/Attribute_Mapper__c/fields/Attribute_Definition_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Definition_Name__c</fullName>
    <description>Hold the name of the attribute</description>
    <label>Attribute Definition Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>