unpackaged/main/default/objects/Attribute_Mapper__c/fields/Attribute_Name__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Name__c</fullName>
    <formula>Attribute_Definition__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attribute Name</label>
    <type>Text</type>
</CustomField>