unpackaged/main/default/objects/Attribute_Mapper__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>