unpackaged/main/default/objects/Attribute_Mapper__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object Name</label>
    <length>90</length>
    <type>Text</type>
</CustomField>