unpackaged/main/default/objects/Attribute_Mapper__c/fields/Product_Definition_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Definition_Name__c</fullName>
    <formula>Attribute_Definition__r.cscfga__Product_Definition__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Definition Name</label>
    <type>Text</type>
</CustomField>