unpackaged/main/default/objects/Attribute_Mapper__c/fields/Property_Map__c.field-meta.xml
<CustomField>
    <fullName>Property_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property Map</label>
    <referenceTo>Property_Map__c</referenceTo>
    <relationshipLabel>Attribute Mappers</relationshipLabel>
    <relationshipName>Attribute_Mappers</relationshipName>
    <type>Lookup</type>
</CustomField>